add portfolio website to footer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     <p class="companion-project-link">Book lover? Check out <a href="https://emojipages.com" target="_blank">EmojiPages</a> 📚</p>
                 </li>
             </ul>
+            <hr/>
+            <p>Created by <a href="https://musicalwebdev.com" target="_blank">Brittany Walker</a> 👩🏾‍💻</p>
         </footer>
     </main>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
