--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Emoji Screen</title>
+    <title>Game Mode | Emoji Screen</title>
     <meta name="description"
         content="A listing of movies, TV shows and musicals depicted through emojis. Click on the emojis to reveal the show or movie name!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +31,7 @@
             <div class="heading-content">
                 <div class="header">
                     <h2>A listing of movies, TV shows and musicals as emojis. 💖</h2>
-                    <p>Click on the emojis to reveal the show or movie name!</p>
-                    <div class="imdb-link">
-                        <i class="fas fa-film"></i>
-                        <a href="https://www.imdb.com/list/ls095903435/" target="_blank" class="imdb-link-item">
-                            View IMDB List
-                        </a>
-                    </div>
+                    <p>Try to guess the TV show, movie or musical for 10 random cards!</p>
                 </div>
                 <div class="contribute-callout">
                     <p>Want to add to EmojiScreen? Head to Github! ✨</p>
@@ -45,25 +39,17 @@
                 </div>
             </div>
         </header>
-        <section id="filters">
-            <p>Click to filter: </p>
-            <button data-filter="musical" class="musical-filter">Musicals</button>
-            <button data-filter="movie" class="movie-filter">Movies</button>
-            <button data-filter="tv" class="tv-filter">TV Shows</button>
-            <button data-filter="view-all" class="all-filter">View All</button>
-        </section>
-        <section id="emojis"></section>
-        <section id="message"></section>
-        <section id="pagination"></section>
-        <button class="btn-reveal-all" title="Reveal all"><i class="fa fa-eye"></i></button>
+        <section id="game"></section>
         <footer>
             <p class="item-count">EmojiScreen currently has <span></span> movies, TV shows and musicals. 💖</p>
             <ul class="footer-list">
                 <li>
-                    <p class="companion-project-link">Music fan? Check out <a href="https://emojibops.com" target="_blank">EmojiBops</a> 🎶</p> 
+                    <p class="companion-project-link">Music fan? Check out <a href="https://emojibops.com"
+                            target="_blank">EmojiBops</a> 🎶</p>
                 </li>
                 <li>
-                    <p class="companion-project-link">Book lover? Check out <a href="https://emojipages.com" target="_blank">EmojiPages</a> 📚</p>
+                    <p class="companion-project-link">Book lover? Check out <a href="https://emojipages.com"
+                            target="_blank">EmojiPages</a> 📚</p>
                 </li>
             </ul>
         </footer>
@@ -73,4 +59,5 @@
     <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
